// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`assignee option when none matches snapshot 1`] = `
<rounded-tri-toggle-button-stub status="none" class="generic-filter-option-content">
  <assignee-option-stub option="[object Object]" status="none"></assignee-option-stub>
</rounded-tri-toggle-button-stub>
`;

exports[`assignee option when positive matches snapshot 1`] = `
<rounded-tri-toggle-button-stub status="positive" class="generic-filter-option-content">
  <assignee-option-stub option="[object Object]" status="positive"></assignee-option-stub>
</rounded-tri-toggle-button-stub>
`;

exports[`filename option when none matches snapshot 1`] = `
<rounded-tri-toggle-button-stub status="none" class="generic-filter-option-content">
  <filename-option-stub option="[object Object]" status="none"></filename-option-stub>
</rounded-tri-toggle-button-stub>
`;

exports[`filename option when positive matches snapshot 1`] = `
<rounded-tri-toggle-button-stub status="positive" class="generic-filter-option-content">
  <filename-option-stub option="[object Object]" status="positive"></filename-option-stub>
</rounded-tri-toggle-button-stub>
`;

exports[`folder option when none matches snapshot 1`] = `
<rounded-tri-toggle-button-stub status="none" class="generic-filter-option-content">
  <folder-option-stub option="[object Object]" status="none"></folder-option-stub>
</rounded-tri-toggle-button-stub>
`;

exports[`folder option when positive matches snapshot 1`] = `
<rounded-tri-toggle-button-stub status="positive" class="generic-filter-option-content">
  <folder-option-stub option="[object Object]" status="positive"></folder-option-stub>
</rounded-tri-toggle-button-stub>
`;
